objects/ApexDebugLog__c.object
<CustomObject>
    <description>custom object used for logging messages from apex</description>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Apex Debug Log</label>
    <nameField>
        <displayFormat>ADL-{0000}</displayFormat>
        <label>Apex Debug Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>